--- a/manifest.json
+++ b/manifest.json
@@ -2,35 +2,32 @@
     "manifest_version": 3,
     "name": "YouTube Video Summarizer",
     "version": "1.1",
-    "description": "Automatically fetches the transcript of a YouTube video, summarizes it via Open WebUI, and displays the summary. Includes a settings page for your API key.",
+    "description": "Automatically fetches the transcript of a YouTube video, summarizes it via Open WebUI, and displays the summary. Includes a settings page for your API key and Open WebUI domain.",
     "permissions": [
-        "activeTab",
-        "scripting",
-        "storage"
+      "activeTab",
+      "scripting",
+      "storage"
     ],
-    "host_permissions": [
-        "https://localhost:3000/*"
+    "optional_permissions": [
+      "https://*/*"
     ],
+    "host_permissions": [],
     "options_ui": {
-        "page": "options.html",
-        "open_in_tab": false
+      "page": "options.html",
+      "open_in_tab": false
     },
     "content_scripts": [
-        {
-            "matches": [
-                "*://*.youtube.com/*"
-            ],
-            "js": [
-                "vendor/marked.min.js",
-                "content.js"
-            ],
-            "run_at": "document_idle"
-        }
+      {
+        "matches": ["*://*.youtube.com/*"],
+        "js": ["vendor/marked.min.js", "content.js"],
+        "run_at": "document_idle"
+      }
     ],
     "browser_specific_settings": {
-        "gecko": {
-            "id": "youTubeSummarizer@example.com",
-            "strict_min_version": "91.0"
-        }
+      "gecko": {
+        "id": "youTubeSummarizer@example.com",
+        "strict_min_version": "91.0"
+      }
     }
-}
+  }
+  
